--- a/MelorLojaCliente/app/src/main/res/drawable/bg_search_view.xml
+++ b/MelorLojaCliente/app/src/main/res/drawable/bg_search_view.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="12dp"/>
-            <solid android:color="@color/light_grey"/>
+            <solid android:color="@color/light_gray"/>
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="12dp"/>
-            <solid android:color="@color/light_grey"/>
+            <solid android:color="@color/light_gray"/>
         </shape>
     </item>
 </selector>
