--- a/MelorLojaCliente/app/src/main/res/drawable/ic_check.xml
+++ b/MelorLojaCliente/app/src/main/res/drawable/ic_check.xml
@@ -1,21 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
+    android:width="23dp"
     android:height="24dp"
-    android:viewportWidth="24"
+    android:viewportWidth="23"
     android:viewportHeight="24">
   <path
-      android:pathData="M2.75,12C2.75,18.937 5.063,21.25 12,21.25C18.937,21.25 21.25,18.937 21.25,12C21.25,5.063 18.937,2.75 12,2.75C5.063,2.75 2.75,5.063 2.75,12Z"
+      android:pathData="M8.089,12L10.364,14.373L14.912,9.627"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/dark_gray"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M2.635,12C2.635,18.937 4.852,21.25 11.5,21.25C18.148,21.25 20.364,18.937 20.364,12C20.364,5.063 18.148,2.75 11.5,2.75C4.852,2.75 2.635,5.063 2.635,12Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor='@color/dark_gray'
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M8.529,10.558C8.529,10.558 10.921,14.044 12.001,14.044C13.081,14.044 15.471,10.558 15.471,10.558"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
       android:strokeColor="@color/dark_gray"
       android:strokeLineCap="round"/>
 </vector>
