--- a/MelorLojaCliente/app/src/main/res/drawable/ic_right.xml
+++ b/MelorLojaCliente/app/src/main/res/drawable/ic_right.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="@color/dark_grey"
+      android:strokeColor="@color/dark_gray"
       android:strokeLineCap="round"/>
 </vector>
