--- a/MelorLojaCliente/app/src/main/res/drawable/ic_search.xml
+++ b/MelorLojaCliente/app/src/main/res/drawable/ic_search.xml
@@ -9,7 +9,7 @@
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="@color/dark_grey"
+      android:strokeColor="@color/dark_gray"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M19.899,18.487C20.678,18.487 21.309,19.12 21.309,19.898C21.309,20.678 20.678,21.309 19.899,21.309C19.12,21.309 18.487,20.678 18.487,19.898C18.487,19.12 19.12,18.487 19.899,18.487Z"
@@ -17,6 +17,6 @@
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="@color/dark_grey"
+      android:strokeColor="@color/dark_gray"
       android:strokeLineCap="round"/>
 </vector>
