--- a/MelorLojaCliente/app/src/main/res/layout/fragment_product_detail.xml
+++ b/MelorLojaCliente/app/src/main/res/layout/fragment_product_detail.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/product_details_image_product"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/light_grey"
+                android:background="@color/light_gray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
