--- a/MelorLojaCliente/app/src/main/res/layout/item_basket_products_list.xml
+++ b/MelorLojaCliente/app/src/main/res/layout/item_basket_products_list.xml
@@ -10,8 +10,9 @@
         android:id="@+id/item_basket_img_product"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:padding="16dp"
-        android:src="@drawable/img_logo"
+        android:background="@color/light_gray"
+        android:padding="8dp"
+        android:scaleType="centerCrop"
         tools:ignore="ContentDescription,MissingConstraints" />
 
     <TextView
@@ -19,10 +20,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:fontFamily="@font/sf_pro_semi_bold"
+        android:maxLines="3"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_marginEnd="12dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/item_basket_txt_product_price"
         app:layout_constraintStart_toEndOf="@id/item_basket_img_product"
