--- a/MelorLojaCliente/app/src/main/res/layout/item_products_list.xml
+++ b/MelorLojaCliente/app/src/main/res/layout/item_products_list.xml
@@ -15,8 +15,8 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_gravity="center_horizontal"
-        android:paddingTop="16dp"
-        android:src="@drawable/place"
+        android:background="@color/light_gray"
+        android:scaleType="centerCrop"
         tools:ignore="ContentDescription" />
 
     <TextView
