--- a/MelorLojaCliente/app/src/main/res/values/colors.xml
+++ b/MelorLojaCliente/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="light_primary">#B180E3</color>
     <color name="bg_color">#F8F6FA</color>
     <color name="item_bg_color">#1A51267D</color>
-    <color name="light_grey">#EBEDF0</color>
-    <color name="dark_grey">#818C99</color>
+    <color name="gray">#76787A</color>
+    <color name="light_gray">#EBEDF0</color>
+    <color name="dark_gray">#818C99</color>
     <color name="error_color">#F44336</color>
     <color name="success_color">#4CAF50</color>
     <color name="yellow">#FFC107</color>
